# Duck-Plague

./: .gitignore  Architecture.md  CMakeLists.txt  README.md  controller.cpp  educate.cpp  encrypt.cpp  mode_messages.h  restore.cpp  trojan.cpp
